[gd_scene load_steps=4 format=3 uid="uid://c2plbok40unee"]

[ext_resource type="Theme" uid="uid://dcn0qri7xl5ii" path="res://themes/gameui_theme.tres" id="1_68jt7"]
[ext_resource type="Script" path="res://scripts/menu/CharacterSelectItemUI.gd" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pcdbj"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.866667, 0.439216, 0.262745, 1)
shadow_size = 2
shadow_offset = Vector2(2, 2)

[node name="CharacterSelectItemUI" type="PanelContainer"]
offset_left = 225.0
offset_right = 339.0
offset_bottom = 159.0
theme = ExtResource("1_68jt7")
theme_override_styles/panel = SubResource("StyleBoxFlat_pcdbj")
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_68jt7")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 125)
layout_mode = 2
theme = ExtResource("1_68jt7")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme = ExtResource("1_68jt7")
alignment = 1

[node name="DescLabel" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Vitality: 5
Strength: 3"
horizontal_alignment = 1

[node name="CharNameLabel" type="Label" parent="VBoxContainer/PanelContainer"]
unique_name_in_owner = true
self_modulate = Color(0.537255, 0.862745, 0.94902, 1)
layout_mode = 2
size_flags_vertical = 0
text = "Knight"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChooseButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
focus_mode = 0
theme = ExtResource("1_68jt7")
text = "Select"
